[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Animais/Frog.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ChopTable/Frog/AzulBola.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Runa.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 60.0

[node name="Frog" type="Node2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -20, 0 )
texture = ExtResource( 2 )

[node name="cabeca" type="Area2D" parent="."]
position = Vector2( -0.963867, -290.763 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cabeca"]
shape = SubResource( 1 )

[node name="Runa" type="Sprite" parent="cabeca"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="pataI" type="Area2D" parent="."]
position = Vector2( 70.9342, 246.141 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShap" type="CollisionShape2D" parent="pataI"]
shape = SubResource( 1 )

[node name="Runa2" type="Sprite" parent="pataI"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="pataS" type="Area2D" parent="."]
position = Vector2( 110.685, 108.339 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pataS"]
shape = SubResource( 1 )

[node name="Runa2" type="Sprite" parent="pataS"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="ombroD" type="Area2D" parent="."]
position = Vector2( 70.5612, -110.705 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ombroD"]
shape = SubResource( 1 )

[node name="Runa2" type="Sprite" parent="ombroD"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Barriga" type="Area2D" parent="."]
position = Vector2( -63.8519, 56.824 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriga"]
shape = SubResource( 1 )

[node name="Runa2" type="Sprite" parent="Barriga"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="bochecha" type="Area2D" parent="."]
position = Vector2( -113.135, -148.756 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bochecha"]
shape = SubResource( 1 )

[node name="Runa2" type="Sprite" parent="bochecha"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
[connection signal="mouse_entered" from="cabeca" to="." method="_on_cabeca_mouse_entered"]
[connection signal="mouse_entered" from="pataI" to="." method="_on_pataI_mouse_entered"]
[connection signal="mouse_entered" from="pataS" to="." method="_on_pataS_mouse_entered"]
[connection signal="mouse_entered" from="ombroD" to="." method="_on_ombroD_mouse_entered"]
[connection signal="mouse_entered" from="Barriga" to="." method="_on_Barriga_mouse_entered"]
[connection signal="mouse_entered" from="bochecha" to="." method="_on_bochecha_mouse_entered"]
